# aoc

./: .gitignore  README.md  day11.py  day11b.py  day12.py  day13.py  day14.py  day2b.py  day3.py  day3b.py  day5.py  day5b.py  day6.py  day7b.py  day8.py  day8b.py  day9.py  test.txt
2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py
2019/: day1.py  day10.py  day11.py  day11b.py  day13.py  day15.py  day1b.py  day2.py  day4.py  day6b.py  day7.py  day9.py
2020/: Cargo.toml  README.md  day02.py  day03.py  day05.py  day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day4.py  day6.py  day7.py  day8.py  day9.py  sheks16.py  sheks18.py
2020/inputs/: 13.1
2021/: 18.1  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py
2022/: 19.1  2  4.1  8.1  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day08_openaichat.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py
2023/: 9.1  day01.py  day02.py  day03.py  day04.py  day05.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day22.py
2024/: 10  15  15.2  16  16.1  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day15.py  day16.py  day18.py
(+10 files in other folders)
