[package]
name = "aoc_2020"
version = "0.1.0"
authors = ["nobu <sssss465@gmail.com>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/bin/day1.rs"

[[bin]]
name = "day2"
path = "src/bin/day2.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
